Fix Contact overflow and Style Carousel :tada:

--- a/styles.css
+++ b/styles.css
@@ -246,26 +246,52 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
-.project{
+#Prev{
+    left: 30px;
+    transform: rotate(90deg);   
+}
+.btns{
+    position: absolute;
+    animation: none;
+    transition: 0.5s;
+}
+.btns:hover{
+    cursor: pointer;
+    color: #4EFFAA96;
+}
+#Next{
+    animation: none;
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 30px;
+}
+.projects .active{
+    display: flex;
+    justify-content: space-evenly;
     margin: 0 auto;
     width: 60vw;
     margin: 2rem;
     padding: 2rem;
     background-color: var(--secondary);
     border-radius: 1.25rem;
-    display: flex;
-    justify-content: space-evenly;
-
+}
+.active *{
+    animation: animate 2s 1;
+}
+.project{
+    display: none;
 }
 i{
     color: var(--primary);
 }
 .project .img{
     height: 40vh;
+    width: 25vw;
 }
 .project-content{
-    flex: 0.5;
+    flex: 0.75;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -274,7 +300,6 @@ i{
 .project-content .heading{
     display: flex;
     align-items: center;
-    width: 20rem;
     font-size: 1.25rem;
     line-height: 1.5rem;
 }
@@ -329,7 +354,7 @@ form textarea{
     outline: none;
     padding: 0.5rem 1rem;
     border: var(--primary) 1px solid;
-    width: 20rem;
+    width: 10rem;
     color: #ffffff96;
     border-radius: 0.5rem;
     background-color: var(--secondary);   
@@ -372,11 +397,27 @@ form .action{
         flex: 1;
         align-items: center;
         text-align: center;
+        margin: 0;
     }
     .intro-text{
+        margin: 0.5rem;
         flex: 1;
     }
-    nav a{
+    nav{
         display: none;
     }
+    .btns{
+        display: none;
+    }
+}
+
+@keyframes animate{
+    0% {
+        transform: scale(0.5);
+        opacity:0;
+    }
+	100% {
+        transform: scale(1);
+        opacity:1;
+	}
 }
